--- a/views/layout.jade
+++ b/views/layout.jade
@@ -24,7 +24,7 @@ html
                   a(href='/aboutus', id='aboutus') About Us
                   li 
                     a(href='/booking', id='booking') Book here
-    script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+    script(src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous")
     script(type='text/JavaScript', src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     script(type="application/javascript", src="javascripts/global.js")
 
